fix scrollbar bug on windows

--- a/src/components/WeatherList/WeatherList.module.scss
+++ b/src/components/WeatherList/WeatherList.module.scss
@@ -4,7 +4,7 @@
   overflow-x: auto;
 
   /* Hide scrollbar for Chrome, Safari and Opera */
-  &:-webkit-scrollbar {
+  &::-webkit-scrollbar {
     display: none;
   }
 
